2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxide.csproj:
	* ReadWriteableUtils.cs:
	* ContextStreamWriter.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* NameBase.cs:
	* ZincOxide.csproj:
	* ZincException.cs:
	* ZincOxideException.cs:
	* ContextStreamWriter.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxide.csproj: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxide.csproj: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IName.cs:
	* NameBase.cs:
	* NameRegister.cs:
	* ZincOxide.csproj:
	* INameRegister.cs:
	* IReadWriteable.cs:
	* GenerateNameRegister.cs:
	* IGenerateNameRegister.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* SetLiteral.cs:
	* ZincOxide.csproj:
	* EvaluationResult.cs:
	* CompilerVerbosity.cs:
	* ReadWriteableUtils.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxide.csproj: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IScope.cs:
	* IReadable.cs:
	* IWriteable.cs:
	* ZincOxide.csproj:
	* IValidateable.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IScope.cs:
	* IValidateable.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* EnumerableUtils.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* AcasType.cs:
	* AcasFunction.cs:
	* AcasOperator.cs:
	* AcasVariable.cs:
	* AcasConstant.cs:
	* AcasIExpression.cs:
	* AcasExpressionBase.cs:
	* AcasGenericFunction.cs:
	* AcasFunctionInstance.cs:
	* AcasBinaryOperatorFlags.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IReadable.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.lex:
	* IReadable.cs:
	* IWriteable.cs:
	* Interaction.cs:
	* ReadWriteableUtils.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* AcasType.cs:
	* MiniZinc.cs:
	* HeadTail.cs:
	* Manpage.txt:
	* MiniZinc.lex:
	* SetLiteral.cs:
	* FloatRange.cs: