@@ -19,6 +19,7 @@
 //  You should have received a copy of the GNU General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 using System.IO;
+using System;
 
 namespace ZincOxide.Codegen {
 
@@ -29,8 +30,24 @@ namespace ZincOxide.Codegen {
 
         #region ICodeFile implementation
         public abstract void Write (Stream stream);
+
+        public string GetText () {
+            string result;
+            using (MemoryStream ms = new MemoryStream ()) {
+                this.Write (ms);
+                using (MemoryStream ms2 = new MemoryStream (ms.ToArray ())) {
+                    using (StreamReader tr = new StreamReader (ms2)) {
+                        result = tr.ReadToEnd ();
+                    }
+                }
+            }
+            return result;
+        }
         #endregion
 
+        public override string ToString () {
+            return this.GetText ();
+        }
 
     }
 }
