@@ -18,6 +18,7 @@
 //
 //  You should have received a copy of the GNU General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+using System;
 using System.IO;
 
 namespace ZincOxide.Codegen {
@@ -25,15 +26,15 @@ namespace ZincOxide.Codegen {
     public static class ContextWriteableUtils {
 
         public static void Write (this IContextWriteable writeable, Stream stream) {
-            ContextStreamWriter sw = new ContextStreamWriter (stream);
-            writeable.Write (sw);
-            sw.Close ();
+            using (ContextStreamWriter sw = new ContextStreamWriter (stream)) {
+                writeable.Write (sw);
+            }
         }
 
         public static void Write (this IContextWriteable writeable, string filename, FileMode mode = FileMode.OpenOrCreate) {
-            FileStream fs = File.Open (filename, mode, FileAccess.Write);
-            writeable.Write (fs);
-            fs.Close ();
+            using (FileStream fs = File.Open (filename, mode, FileAccess.Write)) {
+                writeable.Write (fs);
+            }
         }
 
 
